--- a/Web_shop/src/main/resources/application.properties
+++ b/Web_shop/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 # Application Name
-spring.application.name=demo
+spring.application.name=web-shoppe
 
 # Server Port Configuration
-# Uncomment and change the port number as needed
-# server.port=8080
+server.port=8080
 
+# ========================================
 # MongoDB Configuration
-# Uncomment and configure MongoDB connection details
-# spring.data.mongodb.uri=mongodb://localhost:27017/your_database_name
-# Or configure separately:
-# spring.data.mongodb.host=localhost
-# spring.data.mongodb.port=27017
-# spring.data.mongodb.database=your_database_name
-# spring.data.mongodb.username=your_username
-# spring.data.mongodb.password=your_password
-# spring.data.mongodb.authentication-database=admin
+# ========================================
+
+# Option 1: Local MongoDB (Uncomment if using local MongoDB)
+spring.data.mongodb.uri=mongodb://localhost:27017/web_shoppe
+# Option 2: MongoDB Atlas (Cloud) - Uncomment and replace with your connection string
+# spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<cluster-url>/<database-name>?retryWrites=true&w=majority
+
+# Additional MongoDB Settings (Optional)
+# spring.data.mongodb.auto-index-creation=true
