Configure MongoDB Atlas connection in application.properties and AI log

--- a/src/Backend/src/main/resources/application.properties
+++ b/src/Backend/src/main/resources/application.properties
@@ -8,10 +8,8 @@ server.port=8080
 # MongoDB Configuration
 # ========================================
 
-# Option 1: Local MongoDB (Uncomment if using local MongoDB)
-spring.data.mongodb.uri=mongodb://localhost:27017/web_shoppe
-# Option 2: MongoDB Atlas (Cloud) - Uncomment and replace with your connection string
-# spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<cluster-url>/<database-name>?retryWrites=true&w=majority
+# Local MongoDB (KHÔNG DÙNG)
+# spring.data.mongodb.uri=mongodb://localhost:27017/web_shoppe
 
-# Additional MongoDB Settings (Optional)
-# spring.data.mongodb.auto-index-creation=true
+# MongoDB Atlas (ĐANG DÙNG)
+spring.data.mongodb.uri=mongodb+srv://web_shoppe:Csd201_group2@cluster0.ol8uuso.mongodb.net/web_shoppe?retryWrites=true&w=majority
