Feat: Implement CSV User Import (Migration) with 10k realistic records

--- a/src/Backend/pom.xml
+++ b/src/Backend/pom.xml
@@ -109,12 +109,20 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
-		<!-- Spring Dotenv - Load .env file automatically -->
 		<dependency>
 			<groupId>me.paulschwarz</groupId>
 			<artifactId>spring-dotenv</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+
+		<!-- OpenCSV for Data Import -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.9</version>
+		</dependency>
+
+
 
 	</dependencies>
 
