--- a/src/Backend/src/main/resources/application.properties
+++ b/src/Backend/src/main/resources/application.properties
@@ -83,6 +83,6 @@ otp.expiration=${OTP_EXPIRATION:300000}
 
 # src/main/resources/application.properties
 spring.web.cors.allowed-origins=http://localhost:3000,http://127.0.0.1:5500,http://localhost:5500
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.web.cors.allowed-methods=GET,POST,PUT,PATCH,DELETE
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
