--- a/src/Backend/pom.xml
+++ b/src/Backend/pom.xml
@@ -122,6 +122,12 @@
 			<version>5.9</version>
 		</dependency>
 
+		<!-- Cloudinary for Image Upload -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.36.0</version>
+		</dependency>
 
 
 	</dependencies>
