--- a/src/Backend/src/main/resources/application.properties
+++ b/src/Backend/src/main/resources/application.properties
@@ -81,6 +81,13 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # OTP Configuration
 otp.expiration=${OTP_EXPIRATION:300000}
 
+# ========================================
+# Cloudinary Configuration
+# ========================================
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
+
 # src/main/resources/application.properties
 spring.web.cors.allowed-origins=http://localhost:3000,http://127.0.0.1:5500,http://localhost:5500
 spring.web.cors.allowed-methods=GET,POST,PUT,PATCH,DELETE
