feat: Implement order creation and payment processing features with enhanced logging and error handling
- Added debug logging to OrderController for better traceability during order creation.
- Introduced new DTOs for order item requests and responses to streamline order processing.
- Enhanced OrderService to support direct item purchases and improved address resolution.
- Updated PaymentController to handle payment creation with existing orders.
- Added shipping provider management with a new controller and seeder for initial data.
- Updated pom.xml to include Lombok version for better code generation.
- Introduced new payment methods and improved voucher seeding for promotions.

--- a/src/Backend/pom.xml
+++ b/src/Backend/pom.xml
@@ -17,6 +17,7 @@
 	
 	<properties>
 		<java.version>21</java.version>
+		<lombok.version>1.18.38</lombok.version>
 	</properties>
 	
 	<dependencies>
@@ -63,7 +64,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Lombok -->
+		<!-- Lombok (version từ properties.lombok.version, override Spring Boot parent) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -140,13 +141,12 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
+					<release>21</release>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.30</version>
+							<version>1.18.38</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
