feat: Introduce seller dashboard with product management functionality and security configuration.

--- a/src/Backend/src/main/resources/application.properties
+++ b/src/Backend/src/main/resources/application.properties
@@ -93,3 +93,6 @@ spring.web.cors.allowed-origins=http://localhost:3000,http://127.0.0.1:5500,http
 spring.web.cors.allowed-methods=GET,POST,PUT,PATCH,DELETE
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
+
+# Allow circular references to fix startup error
+spring.main.allow-circular-references=true
